# auria

./: Cargo.toml  Dockerfile  README.md  auria.toml.example
.github/workflows/: ci.yml
deploy/systemd/: auria.service
src/: agent.rs  api.rs  config.rs  lib.rs  main.rs  models.rs  node_client.rs  policy.rs  routing.rs  telemetry.rs
tests/: e2e_integration.rs  smoke.rs
